# canvas-organizer

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
src/canvas_organizer/: organizer.py
